feat: getLatestCertificateUrl() 에서 NPE 방지